# zenn-content

./: .gitattributes  .gitignore  .textlintrc  README.md  package-lock.json  package.json
.github/workflows/: article-test.yml  rust-math-book-test.yml  textlint.yml
article-test/: Cargo.toml
article-test/src/: lib.rs
articles/: 2022-summary.md  async-timeout.md  auto-latexdiff.md  cargo-package.md  cargo-targets.md  clap-vergen-introduction.md  codspeed-continuous-benchmarking.md  concolic-execution.md  container-naming-rules.md  docker-subscription-service-agreement.md  einsum-derive.md  fortran-pointer-as-array.md  github-package-container-registry-example.md  introduction-to-apptainer.md  introduction-to-inventory.md  introduction-to-ocipkg.md  jijpresolve-introduction.md  koopman-dynamic-mode-decomposition.md  llvm-gpu-news-issue-12.md  markdown-link-check.md  ndarray-as-a-map.md  nom-convert-verbose-error.md  numpy-einsum.md  oci-artifact.md  openmp-offloading-for-nvidia-gpu.md  p5js_in_rustdoc.md  pass-cpp-exception-through-rust.md  perf-tutorial.md  perf-tutorial1.md  pyo3-mannually-type-stub-file.md  pyo3-stub-gen-introduction.md  pyodide-wasm-wheel.md  python-build-backend.md  rust-landlock.md  rust-wasm-wheel-maturin.md  rustdoc-katexit.md  rustdoc-mermaid-aquamarine.md  serde-pyobject.md  serde-typeinfo.md  shortest-vector-problem.md  (+9 more)
books/b4bce1b9ea5e6853cb07/: about.md  about_pdf.md  cc.md  config.yaml  criterion.md  data_format.md  development.md  document.md  eom.md  error_handling.md  fftw.md  flamegraph.md  generate_pdf.mjs  interop.md  intro.md  language.md  library.md  link.md  mkl.md  ndarray.md  ndarray_linalg.md  nom.md  num_traits.md  plotlib.md  pyo3.md  rand.md  rayon.md  rug.md  sfmt.md  simd.md  testing.md  thread.md  versioning.md
books/cmake-tutorial/: about.md  cmake.md  config.yml  directories.md  first_cmake.md  flags.md  git_submodule.md  option.md  out_of_source.md  scikit-build.md  shell.md
books/implementing-sat-solver/: boolean_algebra.md  boolean_logic.md  config.yaml  introduction.md
books/scientific-rust/: config.yaml  flamegraph.md  mkl.md  ndarray_linalg.md  num_traits.md  pyo3.md  simd.md
my_first_stub_file/: Cargo.toml  pyproject.toml  test_inline.py  test_stub.py
my_first_stub_file/src/: lib.rs
rust-math-book-test/: Cargo.toml  README.md  build.rs
rust-math-book-test/benches/: fib.rs  fib_with_input.rs
rust-math-book-test/src/: items.proto  lib.rs
