[package]
name = "rust-math-book-test"
version = "0.1.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Basic traits for numbers
num-complex = "0.4.0"
num-traits = "0.2.14"

# ndarray and linear algebra implementations
ndarray = "0.15.3"
ndarray-linalg = { version = "0.14.1", features = ["intel-mkl-static"] }

# random number generator
rand = "0.8.4"

# serialize
serde = "1.0.130"
