[package]
name = "rust-math-book-test"
version = "0.1.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Basic traits for numbers
num-complex = "0.4.2"
num-traits = "0.2.15"

# ndarray and linear algebra implementations
ndarray = "0.15.6"
ndarray-linalg = { version = "0.15.0", features = ["intel-mkl"] }

# random number generator
rand = "0.8.5"
rand_chacha = "0.3.1"

# serialize
serde = "1.0.144"
prost = "0.11"
prost-types = "0.11"

# parser combinator
nom = "7.1.1"
serde_json = "1.0.95"

[dev-dependencies]
# For benchmarking
criterion = { version = "0.4.0", features = ["html_reports"] }

[build-dependencies]
prost-build = "0.11.9"

[lib]
# skip unittest from `cargo bench`
bench = false

# See benches/fib.rs
[[bench]]
name = "fib"
harness = false  # disable libtest harness

# See benches/fib_with_input.rs
[[bench]]
name = "fib_with_input"
harness = false  # disable libtest harness
